# CPU

./: CMakeLists.txt  README.md
include/cpu/: circuitos_basicos.hpp  circuitos_cpu.hpp  cpu.hpp  mate.hpp
src/: circuitos_basicos.cpp  circuitos_cpu.cpp  cpu.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mate.cpp
